src/test/rustdoc-ui/intra-doc/crate-nonexistent.rs
#![deny(rustdoc::broken_intra_doc_links)]

/// [crate::DoesNotExist]
//~^ ERROR unresolved link to `crate::DoesNotExist`
pub struct Item;
